# trashboy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
components/ptrs/: trs.cpp  trs_screen.cpp
firmware/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32s3  wsl.md
firmware/components/bt_keyboard/: CMakeLists.txt
firmware/components/bt_keyboard/src/: bt_keyboard.cpp  bt_keyboard.hpp
firmware/components/ptrs/: CMakeLists.txt  cassette.cpp  io.cpp  settings.cpp  sound.cpp  sound.h  trs-keyboard.cpp  trs-keyboard.h  trs.cpp  trs.h  trs_memory.cpp  trs_screen.cpp  trs_screen.h  ui.cpp  ui.h
firmware/components/trs-io/: CMakeLists.txt  idf_component.yml
firmware/components/trs-lib/: form.c  form.h  screen.c  window.c  window.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  logo.c  logo90.c  logo90c.c  logoc.c  main.cpp  splash.c  splash.h  touch_test.c  touch_test.h  wifi_manager.c  wifi_manager.h
firmware/main/EXIO/: TCA9554PWR.h
firmware/main/LCD_Driver/: ST7701S.c  ST7701S.h
firmware/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
firmware/main/MCP23017/: mcp23017.c  mcp23017.h
firmware/main/Touch_Driver/: Touch.c  Touch.h
firmware/scripts/: rotate_logo.py
kicad/: 1X05_ROUND_70.kicad_mod  TERMBLOCK_1X2-3.5MM.kicad_mod  fp-lib-table  sym-lib-table  trashboy-eagle-import.kicad_sym  trashboy.kicad_pcb  trashboy.kicad_pro  trashboy.kicad_sch
kicad/PAM8302A.pretty/: 1X05_ROUND_70.kicad_mod  TERMBLOCK_1X2-3.5MM.kicad_mod
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
main/BAT_Driver/: BAT_Driver.h
main/Button_Driver/: Button_Driver.c  Button_Driver.h
main/LCD_Driver/: ST7701S.c  ST7701S.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
main/Simulated_Gesture/: Simulated_Gesture.c  Simulated_Gesture.h
