idf_component_register(
                        SRCS  "main.c" 
                              "EXIO/TCA9554PWR.c"
                              "LCD_Driver/ST7701S.c" 
                              "LVGL_Driver/LVGL_Driver.c"
                              "I2C_Driver/I2C_Driver.c"
                              "PCF85063/PCF85063.c"
                              "QMI8658/QMI8658.c"
                              "SD_Card/SD_MMC.c"
                              "LVGL_UI/LVGL_Example.c"
                              "Wireless/Wireless.c"
                              "Buzzer/Buzzer.c"
                              "Button_Driver/multi_button.c"
                              "Button_Driver/Button_Driver.c"
                              "Simulated_Gesture/Simulated_Gesture.c"
                              "BAT_Driver/BAT_Driver.c"

                        INCLUDE_DIRS "./EXIO"
                                     "./LCD_Driver"
                                     "./LVGL_Driver"
                                     "./I2C_Driver"
                                     "./PCF85063"
                                     "./QMI8658"
                                     "./SD_Card"
                                     "./LVGL_UI"
                                     "./Wireless"
                                     "./Buzzer"
                                     "./BAT_Driver"
                                     "./Button_Driver"
                                     "./Simulated_Gesture"
                                     "."
                        )
